# src/main/resources/swagger/api-animal.yaml
@@ -58,7 +58,7 @@ paths:
         201:
           description: "Carro adicionado com sucesso"
           schema:
-            $ref: '#/definitions/ResponsePadraoCarro'
+            $ref: '#/definitions/ResponsePostCarros'
         405:
           description: "Entrada inválida"
         500:
@@ -98,6 +98,11 @@ paths:
       produces:
       - "application/json"
       parameters:
+      - name: id
+        in: path
+        type: integer
+        format: "int64"
+        required: true
       - in: "body"
         name: "body"
         description: "Objeto do tipo carro que será atualizado"
@@ -108,7 +113,7 @@ paths:
         200:
           description: "Carro atualizado com sucesso"
           schema:
-            $ref: '#/definitions/ResponsePadraoCarro'
+            $ref: '#/definitions/ResponsePutCarros'
         405:
           description: "Entrada inválida"
         500:
@@ -118,16 +123,22 @@ paths:
       - "Carros"
       summary: "Remove um carro existente"
       description: "Exclui um novo carro retornando a URI de acesso ao recurso. Nesse caso, ao utiliar a URI será retornado uma resposta 404"
-      operationId: "adicionaCarro"
+      operationId: "removeCarro"
       consumes:
       - "application/json"
       produces:
       - "application/json"
+      parameters:
+        - name: id
+          in: path
+          type: integer
+          format: "int64"
+          required: true
       responses:
         200:
           description: "Carro removido com sucesso"
           schema:
-            $ref: '#/definitions/ResponsePadraoCarro'
+            $ref: '#/definitions/ResponseDeleteCarros'
         405:
           description: "Entrada inválida"
         500:
@@ -147,7 +158,23 @@ definitions:
       carro:
         $ref: '#/definitions/CarroModel'
 
-  ResponsePadraoCarro:
+  ResponsePostCarros:
+    type: object
+    properties:
+      uri:
+        type: "string"
+      carro:
+        $ref: '#/definitions/CarroModel'
+
+  ResponsePutCarros:
+    type: object
+    properties:
+      uri:
+        type: "string"
+      carro:
+        $ref: '#/definitions/CarroModel'
+
+  ResponseDeleteCarros:
     type: object
     properties:
       uri:
@@ -203,7 +230,6 @@ definitions:
       codigo:
         type: "integer"
         format: "int64"
-        type: "string"
       descricao:
         type: "string"
       dataCriacao:
